chore: mql mode now compiles with kotlinjs